# kata-pulse

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.debug  README.md
.github/: dependabot.yml
.github/workflows/: QUICK_REFERENCE.md  README.md  ci-cd.yml
helm/kata-pulse/: Chart.yaml  README.md  values.yaml
helm/kata-pulse/templates/: _helpers.tpl  daemonset.yaml  podmonitor.yaml
src/: context.rs  main.rs  server.rs
src/config/: mod.rs
src/monitor/: cri.rs  cri_client.rs  metrics_cache.rs  metrics_collector.rs  mod.rs  sandbox_cache.rs  sandbox_cache_manager.rs
src/utils/: mod.rs  prometheus_parser.rs  shim_client.rs
src/utils/metrics_converter/: cadvisor.rs  cloud_hypervisor.rs  config.rs  mod.rs
tools/: .auth.json  .login.sh  .prelogin.sh  COMPREHENSIVE_LABEL_ANALYSIS.md  GITHUB_ACTIONS_SETUP.md  KATA_TO_CADVISOR_MAPPING.md  MAPPING_QUICK_REFERENCE.md  METRICS_MAPPING_README.md  VALIDATION_SUMMARY.txt  build-docker-debug.sh  build-docker.sh  cadvisor.out  cadvisor_analysis_summary.txt  daemonset.debug.yaml  daemonset.yaml  debug.yaml  metrics_server.out
