[package]
name = "kata-pulse"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Real-time metrics for Kata Containers. cadvisor-compatible monitoring agent for metrics collection, sandbox management, and agent URL discovery"

[[bin]]
name = "kata-pulse"
path = "src/main.rs"

[dependencies]
# HTTP and server
axum = "0.8.6"
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1.0"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }

# Container runtime clients
containerd-client = "0.8.0"  # Unix socket connection to containerd
k8s-cri = "0.10"           # Kubernetes CRI API types and RuntimeServiceClient

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
